# onward

./: .gitignore  .onward.config.yaml  AGENTS.md  INSTALLATION.md  README.md  pyproject.toml
.onward/hooks/: post-chunk.md  post-task.md
.onward/notes/: TASK-002.md
.onward/plans/: index.yaml  recent.yaml
.onward/prompts/: split-chunk.md  split-plan.md
.onward/templates/: chunk.md  run.md  task.md
.train/plans/: index.yaml  recent.yaml
.train/templates/: chunk.md  plan.md  run.md  task.md
docs/: AI_OPERATOR.md  CAPABILITIES.md  CONTRIBUTION.md  DOGFOOD.md  FORMAT_MIGRATION.md  FUTURE_ROADMAP.md  LIFECYCLE.md  NOOB_GUIDE.md  PROVIDER_REGISTRY.md  RECOVERY.md  WORK_HANDOFF.md
scripts/: onward-exec  run-chunk.py  test.sh
tests/: __init__.py  conftest.py  test_architecture_seams.py  test_artifact_validation.py  test_claim_lifecycle.py  test_claimed_task_ids.py  test_cli_artifacts.py  test_cli_init_doctor.py  test_cli_lifecycle.py  test_cli_note.py  test_cli_report_md.py  test_cli_review.py  test_cli_scale.py  test_cli_split.py  test_cli_work.py  test_cli_workspace_guard.py  test_config_validation.py  test_cross_root_id_uniqueness.py  test_docs_consistency.py  test_executor.py  test_executor_ack.py  test_executor_builtin.py  test_executor_payload.py  test_frontmatter_parser.py  test_linear.py  test_migrate.py  test_multi_root.py  test_onboarding_simulation.py  test_one_off.py  test_parallel_execution.py  test_plan015_run_records.py  test_preflight.py  test_reporter.py  test_run_record_io.py  test_sync.py  test_workspace_layout.py  workspace_helpers.py
(+266 files in other folders)
