[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onward-cli"
version = "0.1.0"
description = "Git-native planning and execution tool for AI-enabled software development"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
onward = "onward.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
